<resources>
    <string name="app_name">Portfolio Springboard</string>

    <string name="hello_world">Hello world!</string>
    <string name="app_title">Portfolio Springboard</string>
    <string name="streamer_title">Spotify Streamer</string>
    <string name="scores_title">Scores</string>
    <string name="library_title">Library</string>
    <string name="buildit_title">Build It Bigger</string>
    <string name="xyz_title">XYZ Reader</string>
    <string name="capstone_title">Capstone: All me</string>
    <string name="action_settings">Settings</string>
    <string name="toast_generic">This button launches my %s app</string>
</resources>
