<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".PortfolioSpringboard">

    <TextView android:text="@string/app_title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:phoneNumber="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView_title"
        android:layout_marginBottom="50dp"
        android:textSize="24dp"
        android:textStyle="bold|italic"
        android:textColor="@color/primary_text_default_material_dark" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/streamer_title"
        android:id="@+id/button_spotify"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_alignStart="@id/button_spotify"
        android:layout_below="@+id/textView_title"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:onClick="launchSpotify"
        android:backgroundTint="#fffd5e0f" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scores_title"
        android:id="@+id/button_scores"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/button_spotify"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:onClick="launchScores"
        android:backgroundTint="#fffd5e0f" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/library_title"
        android:id="@+id/button_library"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button_scores"
        android:onClick="launchLibrary"
        android:backgroundTint="#fffd5e0f" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buildit_title"
        android:id="@+id/button_buildit"
        android:layout_below="@+id/button_library"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:onClick="launchBuildit"
        android:backgroundTint="#fffd5e0f" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xyz_title"
        android:id="@+id/button_reader"
        android:layout_below="@+id/button_buildit"
        android:layout_centerHorizontal="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:onClick="launchReader"
        android:backgroundTint="#fffd5e0f" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capstone_title"
        android:id="@+id/button_capstone"
        android:layout_below="@+id/button_reader"
        android:layout_centerHorizontal="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:onClick="launchCapstone"
        android:backgroundTint="#fffd5e0f" />

</RelativeLayout>
